feat(city): compile parcel-aware land use and farm layouts